--- a/web/index.html
+++ b/web/index.html
@@ -1,9 +1,9 @@
 ﻿<!DOCTYPE html>
+<link rel="shortcut icon" href="/tmp/celesc.png" type="image/x-icon" />
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Wat</title>
-
     <script
             src="https://code.jquery.com/jquery-3.2.1.min.js"
             integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
@@ -11,12 +11,12 @@
     <link rel="stylesheet" href="web/tablestyles.css">
 
 </head>
-
 <body>
 
-<h1>
-<img src="/tmp/marca_celesc.jpeg" width="265" height="105" alt=""/>
-</h1>
+<div align="center" style="vertical-align: middle;width:1000px">
+<div align="center" style="vertical-align: middle;background:#b5b5b5;" >
+<img src="/tmp/marca_celesc.png" width="265" height="105" alt="" style="margin-left:-720px;margin-top:8px"/>
+</div>
 <nav id="menu">
     <ul>
         <li><a href="#">Geral</a></li>
@@ -24,7 +24,6 @@
         <li><a href="maps">Mapa</a></li>
     </ul>
 </nav>
-
 <script>
 
     $.ajax({
@@ -36,17 +35,18 @@
         var dados = JSON.parse(dados_texto);
         for (i = 0; i < dados.length; i++) {
             var $tr = $("<tr>", {"class": "tr_" + dados[i][3]});
-            var $td_localizacao = $("<td>").text(dados[i][0]);
-            var $td_valor = $("<td>").text(dados[i][1]);
-            var $td_horario = $("<td>").text(dados[i][2]);
-            $tr.append($td_localizacao);
-            $tr.append($td_valor);
-            $tr.append($td_horario);
+            var $td_uC = $("<td>").text(dados[i][0]);
+            var $td_adress = $("<td>").text(dados[i][1]);
+            var $td_risco = $("<td>").text(dados[i][2]);
+            $tr.append($td_uC);
+            $tr.append($td_adress);
+            $tr.append($td_risco);
 
             $(".dados").append($tr);
         }
     }
 </script>
+
 
 <table class="heavyTable dados">
     <tr>
@@ -55,6 +55,6 @@
         <th>Risco</th>
     </tr>
 </table>
-
+</div>
 </body>
 </html>
