--- a/web/mapa - Cópia.html
+++ b/web/mapa - Cópia.html
@@ -1,10 +1,9 @@
 ﻿<!DOCTYPE html>
-<link rel="shortcut icon" href="/tmp/celesc.png" type="image/x-icon" />
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Wat</title>
-        {{trdmap.js}}
+    {{trdmap.js}}
     <script
             src="https://code.jquery.com/jquery-3.2.1.min.js"
             integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
@@ -12,8 +11,8 @@
     <link rel="stylesheet" href="web/tablestyles.css">
 
 </head>
-<body>
 
+<body>
 <div align="center" style="vertical-align: middle;width:1000px">
 <div align="center" style="vertical-align: middle;background:#b5b5b5;" >
 <img src="/tmp/marca_celesc.png" width="265" height="105" alt="" style="margin-left:-720px;margin-top:8px"/>
@@ -22,13 +21,11 @@
     <ul>
         <li><a href="/">Geral</a></li>
         <li><a href="req">Requisições</a></li>
-        <li><a href="">Mapa</a></li>
+        <li><a href="#">Mapa</a></li>
     </ul>
 </nav>
 
 <div class="mapa">{{trdmap.html}}</div>
-
-
 </div>
 </body>
 </html>
