--- a/web/req.html
+++ b/web/req.html
@@ -1,9 +1,9 @@
 ﻿<!DOCTYPE html>
+<link rel="shortcut icon" href="/tmp/celesc.png" type="image/x-icon" />
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Wat</title>
-
     <script
             src="https://code.jquery.com/jquery-3.2.1.min.js"
             integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
@@ -11,20 +11,19 @@
     <link rel="stylesheet" href="web/tablestyles.css">
 
 </head>
-
 <body>
 
-<h1>
-<img src="/tmp/marca_celesc.jpeg" width="265" height="105" alt=""/>
-</h1>
+<div align="center" style="vertical-align: middle;width:1000px">
+<div align="center" style="vertical-align: middle;background:#b5b5b5;" >
+<img src="/tmp/marca_celesc.png" width="265" height="105" alt="" style="margin-left:-720px;margin-top:8px"/>
+</div>
 <nav id="menu">
     <ul>
-        <li><a href="/">Geral</a></li>
-        <li><a href="#">Requisições</a></li>
+        <li><a href="\">Geral</a></li>
+        <li><a href="">Requisições</a></li>
         <li><a href="maps">Mapa</a></li>
     </ul>
 </nav>
-
-
+</div>
 </body>
 </html>
